@@ -38,6 +38,5 @@ DPDK Support
    /topics/dpdk/vdev
    /topics/dpdk/pmd
    /topics/dpdk/qos
-   /topics/dpdk/pdump
    /topics/dpdk/jumbo-frames
    /topics/dpdk/memory
