@@ -4,6 +4,8 @@ Post-v2.13.0
    - OpenFlow:
      * The OpenFlow ofp_desc/serial_num may now be configured by setting the
        value of other-config:dp-sn in the Bridge table.
+   - DPDK:
+     * Deprecated DPDK pdump packet capture support removed.
 
 
 v2.13.0 - 14 Feb 2020
